ocaml (4.04.0-1) UNRELEASED; urgency=medium

  [ Mehdi Dogguy ]
  * Use secure and canonical URIs for Vcs-* fields

  [ Ximin Luo ]
  * New upstream release.

 -- Ximin Luo <infinity0@debian.org>  Sun, 06 Nov 2016 19:58:56 +0100

ocaml (4.03.0-5) experimental; urgency=medium

  * Fix variable substitution in Makefile syntax.

 -- Ximin Luo <infinity0@debian.org>  Thu, 03 Nov 2016 01:39:42 +0100

ocaml (4.03.0-4) experimental; urgency=medium

  * Add a versioned Provides so we can have versioned Build-Depends
    on ocaml-best-compilers in other packages.

 -- Ximin Luo <infinity0@debian.org>  Wed, 02 Nov 2016 15:26:44 +0100

ocaml (4.03.0-3) experimental; urgency=medium

  * Default to PIC on arm, to fix failing armhf tests.

 -- Ximin Luo <infinity0@debian.org>  Wed, 02 Nov 2016 13:09:29 +0100

ocaml (4.03.0-2) experimental; urgency=medium

  * Add native compilers for ppc64, ppc64el, s390x.
  * Skip native tests on bytecode-only systems.

 -- Ximin Luo <infinity0@debian.org>  Fri, 28 Oct 2016 02:13:18 +0200

ocaml (4.03.0-1) experimental; urgency=medium

  * Team upload.
  * New upstream release.

 -- Ximin Luo <infinity0@debian.org>  Thu, 20 Oct 2016 17:43:52 +0200

ocaml (4.02.3-7) unstable; urgency=medium

  * d/rules: split install-stamp target into -arch and -indep, to allow
    for building with option -A (Closes: #806087).
  * drop d/ocaml-nox.links.in since it contains only links to the
    ocamlbuild.1 manpage which is no longer shipped by upstream. Thanks
    to Andreas Beckmann for the hint (Closes: #801447).
  * d/ocaml-base-nox.README.Debian: fix two spelling errors.
  * standards-version 3.9.8 (no change)

 -- Ralf Treinen <treinen@debian.org>  Fri, 15 Jul 2016 22:19:44 +0200

ocaml (4.02.3-6) unstable; urgency=medium

  * Add x32 support (Closes: #773409)

 -- Stéphane Glondu <glondu@debian.org>  Tue, 16 Feb 2016 11:34:16 +0100

ocaml (4.02.3-5) unstable; urgency=medium

  * Fix ocamldoc with -pp (Closes: #802347)
