@@ -37,7 +37,8 @@ Depends:
  binutils
 Provides:
  ${ocaml:Provides},
- ${F:BestProvides},
+ ocaml-best-compilers (= ${binary:Version}),
+ ${F:NativeProvides},
  libnums-ocaml-dev
 Suggests:
  ocaml-doc,
@@ -145,26 +146,6 @@ Description: Runtime system for OCaml bytecode executables
  executables. The 'ocaml' package contains the full development suite of
  Objective Caml.  You may wish to install the 'ocaml-base-nox' package if
  you do not require any graphical capabilities for your runtime.
-
-Package: ocaml-native-compilers
-Architecture: amd64 arm64 armel armhf hurd-i386 i386 kfreebsd-i386 kfreebsd-amd64 lpia powerpc ppc64 ppc64el sparc s390x
-Depends:
- ocaml-nox (= ${binary:Version}),
- gcc, binutils,
- ${shlibs:Depends},
- ${misc:Depends}
-Provides: ocaml-best-compilers (= ${binary:Version})
-Replaces: ocaml-nox (<= 3.09.2-3)
-Description: Native code compilers of the OCaml suite (the .opt ones)
- Objective Caml (OCaml) is an implementation of the ML language, based on
- the Caml Light dialect extended with a complete class-based object system
- and a powerful module system in the style of Standard ML.
- .
- This package contains the native code version of the compilers
- (ocamlc.opt, ocamllex.opt, ocamlopt.opt. The normal version of these
- programs are found in the 'ocaml' package. For big source codes,
- these packages can be two to three times faster, but for most normal
- sized sources, the difference won't be noticeable.
 
 Package: ocaml-source
 Architecture: all
