@@ -1,5 +1,0 @@
-usr/share/man/man1/ocamlc.1.gz		usr/share/man/man1/ocamlc.opt.1.gz
-usr/share/man/man1/ocamldep.1.gz	usr/share/man/man1/ocamldep.opt.1.gz
-usr/share/man/man1/ocamldoc.1.gz	usr/share/man/man1/ocamldoc.opt.1.gz
-usr/share/man/man1/ocamllex.1.gz	usr/share/man/man1/ocamllex.opt.1.gz
-usr/share/man/man1/ocamlopt.1.gz	usr/share/man/man1/ocamlopt.opt.1.gz
