@@ -5,6 +5,7 @@ ocaml (4.04.0-1) UNRELEASED; urgency=medium
 
   [ Ximin Luo ]
   * New upstream release.
+  * Merge ocaml-native-compilers into ocaml-nox.
 
  -- Ximin Luo <infinity0@debian.org>  Sun, 06 Nov 2016 19:58:56 +0100
 
